--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="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"
+OPENAI_ORGANIZATION="sq"
